# VirtualAirlineManagement

./: .gitignore  3D_SETUP.md  CLAUDE.md  README.md  README_FLET.md  airline_data.json  airline_game.db  app.py  config.ini  config.ini.backup  debug_3d.html  flask_app.py  instructions.md  main.py  main.py.backup  main_tkinter.py.old  pyproject.toml  regenerate_marketplace.py  requirements.txt  test_3d.html  test_economics.py  test_flask_economics.py  test_flight_sim.html  test_frontend.html  test_migration.py  test_model.html  userdata.db
.claude/: settings.local.json
core/: config_manager.py  database_utils.py  database_utils.py.backup  settings.py  update_database_schema.py  utils.py  utils.py.backup
modules/: ai_competition.py  aircraft_marketplace.py  aircraft_marketplace_gui.py  aircraft_marketplace_view.py  fleet_management.py  fleet_management_view.py  forecasting_engine.py  market_competition.py  pilot_dashboard.py  pilot_dashboard_view.py  pilot_logbook.py  pilot_logbook_view.py  pilot_management.py  pilot_management_gui.py  route_economics_view.py  route_management.py  schedule.py  schedule_view.py  secondary_aircraft_market.py  settings_view.py
scripts/: complete_fix.py  create_airline_data.py  create_pilots_table.py  debug_main.py  diagnose_issues.py  fix_aircraft_database.py  fix_database_and_dialogs.py  initial_setup.py  migrate_aircraft_system.py  populate_routes_and_airports.py  test_fetch_logbook_data.py  update_database_schema.py
static/css/: style.css
templates/: index.html
tests/: test_database_utils.py  test_pilot_ranking_achievements.py
(+5 files in other folders)
