[project]
name = "virtual-airline-management"
version = "1.0.0"
description = "Virtual Airline Management System"
requires-python = ">=3.9"
dependencies = [
    "flet[all]==0.28.3",
    "flet-map==0.1.0",
    "requests>=2.32.3",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly[express]>=5.15.0",
    "Pillow>=10.0.0",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
